added __main__ module to dispatch python3 -m evmlab <subcommand> <args> updated TODO

--- a/TODO
+++ b/TODO
@@ -16,3 +16,4 @@
 * move Dockerfiles to own subdir
 * document docker usage and/or geth-evm/parity-evm usage
 * can we make the code autosense for docker usage? (get rid of --no-docker flag)
+* get own infura api endpoint enabled for debug_traceTransaction
